tests/neg-custom-args/captures/extending-cap-classes.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/extending-cap-classes.scala:14:15 ------------------------
14 |  val z2: C1 = y2 // error
   |               ^^
   |               Found:    (y2 : C2)
   |               Required: C1
   |
   |               Note that capability `any` cannot flow into capture set {}.
   |
   |               where:    any is a root capability classified as SharedCapability in the type of value y2
   |
   | longer explanation available when compiling with `-explain`
